--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -16,7 +16,7 @@
 </head>
 <body class="background-image">
 
-<ul class="navbar navbar-expand-lg  nav-fill nav-pills col-md-12">
+<ul class="navbar navbar-expand-lg  nav-fill nav-pills col-md-12 navigation-bar">
     <li class="nav-item active navigation-tabs">
         <a class="nav-link" href="/HeroSighting/home">Home <span class="sr-only">(current)</span></a>
     </li>
@@ -37,13 +37,14 @@
     </li>
 
 </ul>
+<h1 id="" class="title-headers text-center">Locations</h1>
 <div class="body-container">
 
 <header>
 
 
 
-    <h1 id="title-headers" class="text-center">Locations</h1>
+
 
 
 </header>
@@ -68,11 +69,10 @@
     <div class="col-8">
         <div class="col-12">
 
-            <!--<p th:text = "${singlepower}"></p>-->
-            <!-- Example single danger button -->
+
             <div >
                 <form class="form-background" method="post">
-                    <h4 class="page-title">Add Location</h4>
+                    <h4 class="page-title">New Location</h4>
 
                     <div class="form-group">
 
@@ -105,7 +105,7 @@
                         <!--</div>-->
 
                     <!--</div>-->
-                    <div class="alight-right">
+                    <div>
                         <button type="submit" class=" location-button ">Add location</button>
 
                     </div>
@@ -114,9 +114,7 @@
                     <!--</div>-->
                     <!--<button type="button" id="powerChoice" onclick="openNav()">Choose Powers</button>-->
                 </form>
-                <ul id="list">
 
-                </ul>
             </div>
 
         </div>
