--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -10,6 +10,11 @@ li{
 html{
     cursor:pointer;
 }
+.title-headers{
+    font-size:3.5em;
+    margin-top:2.5%;
+    margin-bottom: 2.5%;
+}
  .background-image{
        width:100%
        position:fixed;
@@ -29,11 +34,22 @@ html{
     margin-left:20%;
     margin-bottom:6%;
 }
+
+.superpower-label {
+    margin-left: 40%;
+    font-size: 1.5em;
+}
+
+.superpower-list {
+    width: 100%;
+    height: 100%;
+    margin-left: 50%;
+}
 .form-background{
-    padding-top:15px;
-    margin-left: 20%;
-    width: 96%;
     margin: auto;
+    margin-top:5%;
+    padding-top:15px;
+    width: 96%;
     background: rgb(195, 29, 16);
     border:4px;
     color:#fff;
@@ -43,7 +59,17 @@ html{
     box-shadow: 10px 10px 5px grey;
 
 }
+.icon-slots{
+    color:rgb(195, 29, 16);
+}
+.abilities {
+    margin-top: 10%;
+    font-size: 3em;
+    color: rgb(195, 29, 16);
+    border-bottom: 1px solid rgb(195, 29, 16);
 
+    text-shadow: 2px 2px 5px grey;
+    }
 .location-button{
     margin-top: 0.5em;
     margin-right: 0.75em;
@@ -62,7 +88,7 @@ html{
     color: white;
     opacity: 1;
 
-               }
+ }
 .input-style{
     color:#fff;
     margin-left:20%;
@@ -88,7 +114,8 @@ input:focus {
     margin:auto;
     width:75%;
     border-radius:5px;
-    background: rgb(220,245,245)
+    background: rgb(220,245,245);
+    margin-bottom:5%;
 }
 .newPower{
     margin-top: 30px;
@@ -104,7 +131,7 @@ a:link,a:visited{
     border-radius: 16px;
     padding: 5px;
     text-align: center;
-    background-color: #1849CA;
+    background-color: rgb(22, 44, 162);
     margin:10px;
     color: #FFF;
     box-shadow: 5px 5px 5px grey;
@@ -114,10 +141,10 @@ a:link,a:visited{
     width:100%;
     margin:0 auto;
 }
-.navigation-tabs{
-
-
-    background: rgba(255,255,255,0.5);
+.navigation-bar{
+    background: rgb(195, 29, 16);
+    border-radius: 5px;
+    margin-top:0px;
 
 }
 .editing {
